--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "-goit-react-hw-02",
+  "name": "-goit-react-hw-03",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -11,7 +11,9 @@
   },
   "dependencies": {
     "clsx": "^2.1.0",
+    "formik": "^2.4.5",
     "modern-normalize": "^2.0.0",
+    "nanoid": "^5.0.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1"
